trunk/Archive/aeead074d87af461cfb946e4adf162b2-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In instantiation of 'class ConditionalIterator<int*, bool*>':
main.cpp:59:104:   required from here
main.cpp:11:43: error: 'int*' is not a class, struct, or union type
     typedef typename ItSource::value_type ValueType;
                                           ^
main.cpp: In function 'int main()':
main.cpp:62:22: error: no match for 'operator*' (operand type is 'ConditionalIterator<int*, bool*>')
         std::cout << *cit << std::endl;
                      ^
main.cpp:63:12: error: no 'operator++(int)' declared for postfix '++' [-fpermissive]
         cit++;
            ^
